--- a/charts/git-mirror/1.0.0/templates/git-mirror-ingress.yaml
+++ b/charts/git-mirror/1.0.0/templates/git-mirror-ingress.yaml
@@ -4,9 +4,9 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ $fullName }}-mirror
+  name: {{ $fullName }}
   labels:
-    app.kubernetes.io/name: {{ include "gitMirror.name" . }}-mirror
+    app.kubernetes.io/name: {{ include "gitMirror.name" . }}
     helm.sh/chart: {{ include "gitMirror.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
@@ -32,7 +32,7 @@ spec:
         paths:
           - path: {{ $ingressPath }}
             backend:
-              serviceName: {{ $fullName }}-mirror
+              serviceName: {{ $fullName }}
               servicePort: http
   {{- end }}
 {{- end }}
