--- a/charts/git-mirror/1.0.0/Chart.yaml
+++ b/charts/git-mirror/1.0.0/Chart.yaml
@@ -1,5 +1,6 @@
 apiVersion: v1
 appVersion: "v1.0.0"
 description: A Helm chart for Kubernetes
+icon: https://git-scm.com/images/logo@2x.png
 name: git-mirror
 version: 1.0.0
