--- a/charts/git-mirror/0.5.0/Chart.yaml
+++ b/charts/git-mirror/0.5.0/Chart.yaml
@@ -1,5 +1,6 @@
 apiVersion: v1
-appVersion: "v0.4.0"
-description: A Helm chart for Kubernetes
+appVersion: "v0.5.0"
 name: git-mirror
-version: 0.4.0
+version: 0.5.0
+description: Services for mirroring git repos
+icon: https://git-scm.com/images/logo@2x.png
