EIO-196: change persistent volumes to use fluentd

--- a/charts/git-mirror/0.5.0/templates/git-analyze-deployment.yaml
+++ b/charts/git-mirror/0.5.0/templates/git-analyze-deployment.yaml
@@ -33,11 +33,11 @@ spec:
           {{ toYaml .Values.analyze.resources | nindent 10 }}
         volumeMounts:
         - mountPath: /var/log/nginx
-          name: efs-shared
+          name: fluentd
       restartPolicy: Always
 
       volumes:
-      - name: efs-shared
+      - name: fluentd
         persistentVolumeClaim:
-          claimName: efs-shared
+          claimName: fluentd
 {{ end }}
