--- a/charts/git-mirror/0.5.0/templates/metrics-deployment.yaml
+++ b/charts/git-mirror/0.5.0/templates/metrics-deployment.yaml
@@ -58,9 +58,9 @@ spec:
           {{ toYaml .Values.metrics.resources | nindent 10 }}
         volumeMounts:
         - mountPath: /var/log/nginx
-          name: efs-shared
+          name: fluentd
       restartPolicy: Always
       volumes:
-      - name: efs-shared
+      - name: fluentd
         persistentVolumeClaim:
-          claimName: efs-shared
+          claimName: fluentd
