--- a/charts/git-mirror/0.5.0/templates/nginx-logs-pvc.yaml
+++ b/charts/git-mirror/0.5.0/templates/nginx-logs-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: efs-shared
+  name: fluentd
   annotations:
     volume.beta.kubernetes.io/storage-class: "efs"
 spec:
