EIO-196: enable debug on rancher-catalog-stats service

--- a/charts/git-mirror/0.5.0/templates/metrics-deployment.yaml
+++ b/charts/git-mirror/0.5.0/templates/metrics-deployment.yaml
@@ -48,11 +48,11 @@ spec:
         - catalog
         - -daemon
         - -poll
+        - -debug
         - -influxuser
         - $(INFLUX_USER)
         - -influxpass
         - $(INFLUX_PASS)
-        - debug
         image: {{ .Values.metrics.image.repository }}:{{ .Values.metrics.image.tag }}
         imagePullPolicy: {{ .Values.metrics.image.pullPolicy }}
         resources:
