--- a/charts/git-mirror/0.5.0/templates/metrics-deployment.yaml
+++ b/charts/git-mirror/0.5.0/templates/metrics-deployment.yaml
@@ -56,12 +56,13 @@ spec:
         image: {{ .Values.metrics.image.repository }}:{{ .Values.metrics.image.tag }}
         imagePullPolicy: {{ .Values.metrics.image.pullPolicy }}
         resources:
-          {{ toYaml .Values.metrics.resources | nindent 10 }}
+{{ toYaml .Values.metrics.resources | indent 8 }}
         volumeMounts:
-        - mountPath: /var/log/nginx
-          name: fluentd
+{{- if .Values.volumeMounts }}
+{{ toYaml .Values.volumeMounts | indent 8 }}
+{{- end }}
       restartPolicy: Always
       volumes:
-      - name: fluentd
-        persistentVolumeClaim:
-          claimName: fluentd
+{{- if .Values.volumes }}
+{{ toYaml .Values.volumes | indent 8 }}
+{{- end }}
