--- a/charts/git-mirror/0.5.0/templates/nginx-logs-pvc.yaml
+++ b/charts/git-mirror/0.5.0/templates/nginx-logs-pvc.yaml
@@ -1,14 +1,28 @@
-# EFS
-apiVersion: v1
+{{- if .Values.persistence.enabled -}}
 kind: PersistentVolumeClaim
+apiVersion: v1
 metadata:
-  name: fluentd
+  name: {{ template "git-mirror.fullname" . }}
+  labels:
+    app: {{ template "git-mirror.name" . }}
+    chart: {{ template "git-mirror.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+{{- if .Values.persistence.annotations }}
   annotations:
-    volume.beta.kubernetes.io/storage-class: "efs"
+{{ toYaml .Values.persistence.annotations | indent 4 }}
+{{- end }}
 spec:
   accessModes:
-  - ReadWriteMany
+    - {{ .Values.persistence.accessMode | quote }}
   resources:
     requests:
-      storage: 100Mi
-  storageClassName: efs
+      storage: {{ .Values.persistence.size | quote }}
+{{- if .Values.persistence.storageClass }}
+{{- if (eq "-" .Values.persistence.storageClass) }}
+  storageClassName: ""
+{{- else }}
+  storageClassName: "{{ .Values.persistence.storageClass }}"
+{{- end }}
+{{- end }}
+{{- end -}}
