--- a/charts/git-mirror/0.5.0/templates/metrics-deployment.yaml
+++ b/charts/git-mirror/0.5.0/templates/metrics-deployment.yaml
@@ -41,7 +41,7 @@ spec:
         args:
         - rancher-catalog-stats
         - -filepath
-        - {{ .Values.catalog_filepath }
+        - {{ .Values.catalog_filepath }}
         - -influxurl
         - $(INFLUX_URL)
         - -influxdb
