RANCHER-25754: add helm3-charts repo

--- a/charts/git-mirror/0.6.0/values.yaml
+++ b/charts/git-mirror/0.6.0/values.yaml
@@ -93,7 +93,7 @@ mirrorDebug: "false"
 mirrorEtcdEndpoints: http://etcd:2379
 mirrorGithubListenAddr: :4141
 mirrorPollPeriod: 5m
-mirrorRepo: https://github.com/rancher/rancher-catalog, https://github.com/rancher/community-catalog, https://github.com/rancher/infra-catalog, https://github.com/rancher/charts,https://github.com/rancher/system-charts
+mirrorRepo: https://github.com/rancher/rancher-catalog, https://github.com/rancher/community-catalog, https://github.com/rancher/infra-catalog, https://github.com/rancher/charts, https://github.com/rancher/system-charts, https://github.com/rancher/helm3-charts
 serverName: git.rancher.io
 workerConnections: 4096
 
