--- a/charts/drone-exporter/0.0.1/templates/deployment.yaml
+++ b/charts/drone-exporter/0.0.1/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     {{- end }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: DRONE_URL
