--- a/charts/slackin/0.3.0/Chart.yaml
+++ b/charts/slackin/0.3.0/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "0.13.2"
+appVersion: "v2.1.3"
 description: A Helm chart for Kubernetes
 name: slackin
-version: 0.2.0
+version: 0.3.0
