--- a/charts/slackin/0.3.0/values.yaml
+++ b/charts/slackin/0.3.0/values.yaml
@@ -21,6 +21,12 @@ slackinTheme: "light"
 slackinPort: 3000
 #Slackin App Port Defaul 3000
 
+slackinInterval: 3600000
+#Slackin Interval - How often to poll slack data
+
+slackinPageDelay: 5000
+#Slackin Page Delay - How much time between Slack API requests
+
 slackSubdomain: "rancher-users"
 #Your Slack's subdomain (**this**.slack.com)
 
