harvester-upgrade-responder: Update cmdline to fix pod starting
Signed-off-by: Sheng Yang <sheng.yang@rancher.com>

--- a/charts/harvester-upgrade-responder/0.2.0/templates/deployment.yaml
+++ b/charts/harvester-upgrade-responder/0.2.0/templates/deployment.yaml
@@ -42,10 +42,10 @@ spec:
                 name: {{ .Values.secret.name }}
                 key: lurInfluxPassword
           command:
-          - harvester-services
+          - upgrade-responder
           args:
           - --debug
-          - start-upgrade-responder
+          - start
           - --upgrade-response-config
           - /run/secrets/upgrade-responder-config.json
           - --influxdb-url
