--- a/charts/drone-autoscaler/0.1.0/values.yaml
+++ b/charts/drone-autoscaler/0.1.0/values.yaml
@@ -11,7 +11,9 @@ image:
   tag: ""
 
 imagePullSecrets: []
+
 nameOverride: ""
+
 fullnameOverride: ""
 
 podAnnotations: {}
@@ -44,3 +46,7 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+environment:
+  config: {}
+  userData: ""
