--- a/charts/drone-autoscaler/0.1.0/templates/deployment.yaml
+++ b/charts/drone-autoscaler/0.1.0/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           envFrom:
-            - configMapRef:
+            - secretRef:
                 name: {{ include "drone-autoscaler.fullname" . }}-environment
           ports:
             - name: http
