force environment values to string

--- a/charts/drone-autoscaler/0.1.0/templates/environmentSecret.yaml
+++ b/charts/drone-autoscaler/0.1.0/templates/environmentSecret.yaml
@@ -12,7 +12,7 @@ type: Opaque
 data:
 {{- if .Values.environment.config }}
 {{- range $key, $value := .Values.environment.config }}
-  {{ $key }}: {{ $value | b64enc | quote }}
+  {{ $key }}: {{ $value | toString | b64enc | quote }}
 {{- end }}
 {{- end }}
 {{- if .Values.environment.userData }}
