adjust write access and remove conditions for volume mounts

--- a/charts/drone-autoscaler/0.1.0/templates/deployment.yaml
+++ b/charts/drone-autoscaler/0.1.0/templates/deployment.yaml
@@ -34,11 +34,9 @@ spec:
             - secretRef:
                 name: {{ include "drone-autoscaler.fullname" . }}-environment
           volumeMounts:
-          {{- if .Values.environment.config.DRONE_AMAZON_USERDATA_FILE }}
-            - name: user-data
-              mountPath: {{ .Values.environment.config.DRONE_AMAZON_USERDATA_FILE | dir }}
-              readOnly: true
-          {{- end }}
+            - name: data
+              mountPath: /data
+              readOnly: false
           ports:
             - name: http
               containerPort: 8080
@@ -54,14 +52,14 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
-        {{- if .Values.environment.config.DRONE_AMAZON_USERDATA_FILE }}
-        - name: user-data
+        - name: data
           secret:
             secretName: {{ include "drone-autoscaler.fullname" . }}-environment
             items:
+              {{- if .Values.environment.config.DRONE_AMAZON_USERDATA_FILE }}
               - key: userData
                 path: {{ .Values.environment.config.DRONE_AMAZON_USERDATA_FILE | base }}
-       {{- end }}
+             {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
