--- a/charts/drone-autoscaler/0.1.0/templates/deployment.yaml
+++ b/charts/drone-autoscaler/0.1.0/templates/deployment.yaml
@@ -45,12 +45,10 @@ spec:
               containerPort: 8080
               protocol: TCP
           livenessProbe:
-            httpGet:
-              path: /
+            tcpSocket:
               port: http
           readinessProbe:
-            httpGet:
-              path: /
+            tcpSocket:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
