--- a/charts/drone-autoscaler/0.1.0/values.yaml
+++ b/charts/drone-autoscaler/0.1.0/values.yaml
@@ -47,6 +47,10 @@ tolerations: []
 
 affinity: {}
 
-environment:
-  config: {}
-  userData: ""
+config: {}
+
+tlsKey: ""
+
+tlsCert: ""
+
+userData: ""
