change key name for userdata

--- a/charts/drone-autoscaler/0.1.0/templates/secrets.yaml
+++ b/charts/drone-autoscaler/0.1.0/templates/secrets.yaml
@@ -30,7 +30,7 @@ metadata:
 type: Opaque
 data:
 {{- if (.Values.userData) }}
-  userData: {{ .Values.userData | b64enc | quote }}
+  cloud-init.yaml: {{ .Values.userData | b64enc | quote }}
 {{- end }}
 {{- if (.Values.tlsKey ) }}
   tlsKey: {{ .Values.tlsKey | b64enc | quote }}
