Create drone autoscaler (#45)
* change pod env ref to secret

* force environment values to string

* add volume specs to deployment

* fix volumes context in yaml template

* adjust write access and remove conditions for volume mounts

* changes to user data volumes

* trying different volume mount options for user-data

* change health checks

* refactor secrets and volumes

* change secretref to config

* change key name for userdata

Co-authored-by: Nelson Roberts <paraglade@fallout.local>

--- a/charts/drone-autoscaler/0.1.0/templates/deployment.yaml
+++ b/charts/drone-autoscaler/0.1.0/templates/deployment.yaml
@@ -31,22 +31,37 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           envFrom:
-            - configMapRef:
-                name: {{ include "drone-autoscaler.fullname" . }}-environment
+            - secretRef:
+                name: {{ include "drone-autoscaler.fullname" . }}-config
+          volumeMounts:
+            {{- if not (.Values.config.DRONE_DATABASE_DATASOURCE)  }}
+            - name: data
+              mountPath: /data
+            {{- end }}
+            {{- if or (.Values.userData) (.Values.tlsKey) (.Values.tlsCert) }}
+            - name: resources
+              mountPath: /resources
+            {{- end }}
           ports:
             - name: http
               containerPort: 8080
               protocol: TCP
           livenessProbe:
-            httpGet:
-              path: /
+            tcpSocket:
               port: http
           readinessProbe:
-            httpGet:
-              path: /
+            tcpSocket:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+      volumes:
+        - name: data
+          emptyDir: {}
+        {{- if or (.Values.userData) (.Values.tlsKey) (.Values.tlsCert) }}
+        - name: resources
+          secret:
+            secretName: {{ include "drone-autoscaler.fullname" . }}-resources
+        {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
