changes for persistent volumes

--- a/charts/drone-autoscaler/0.2.0/values.yaml
+++ b/charts/drone-autoscaler/0.2.0/values.yaml
@@ -47,6 +47,16 @@ tolerations: []
 
 affinity: {}
 
+persistentVolume:
+  enabled:
+  accessModes:
+    - ReadWriteOnce
+  existingClaim: ""
+  size: 1Gi
+
+emptyDir:
+  sizeLimit: ""
+
 config: {}
 
 tlsKey: ""
