--- a/charts/drone-autoscaler/0.2.0/templates/deployment.yaml
+++ b/charts/drone-autoscaler/0.2.0/templates/deployment.yaml
@@ -47,16 +47,28 @@ spec:
               containerPort: 8080
               protocol: TCP
           livenessProbe:
-            tcpSocket:
+            httpGet:
+              path: /healthz
               port: http
           readinessProbe:
-            tcpSocket:
+            httpGet:
+              path: /healthz
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
         - name: data
-          emptyDir: {}
+        {{- if .Values.persistentVolume.enabled }}
+          persistentVolumeClaim:
+            claimName: {{ if .Values.persistentVolume.existingClaim }}{{ .Values.persistentVolume.existingClaim }}{{- else }}{{ template "drone-autoscaler.fullname" . }}{{- end }}
+        {{- else }}
+          emptyDir:
+          {{- if .Values.emptyDir.sizeLimit }}
+            sizeLimit: {{ .Values.emptyDir.sizeLimit }}
+          {{- else }}
+            {}
+          {{- end -}}
+        {{- end -}}
         {{- if or (.Values.userData) (.Values.tlsKey) (.Values.tlsCert) }}
         - name: resources
           secret:
