--- a/charts/static-site-deployer/0.1.0/values.yaml
+++ b/charts/static-site-deployer/0.1.0/values.yaml
@@ -10,7 +10,7 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
-imagePullSecrets: []
+imageCredentials: {}
 nameOverride: ""
 fullnameOverride: ""
 
