--- a/charts/opni-upgrade-responder/0.2.0/templates/ingress.yaml
+++ b/charts/opni-upgrade-responder/0.2.0/templates/ingress.yaml
@@ -1,13 +1,13 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "opniUpdateResponder.fullname" . -}}
+{{- $fullName := include "opniUpgradeResponder.fullname" . -}}
 {{- $ingressPath := .Values.ingress.path -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    app.kubernetes.io/name: {{ include "opniUpdateResponder.name" . }}
-    helm.sh/chart: {{ include "opniUpdateResponder.chart" . }}
+    app.kubernetes.io/name: {{ include "opniUpgradeResponder.name" . }}
+    helm.sh/chart: {{ include "opniUpgradeResponder.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 {{- with .Values.ingress.annotations }}
