--- a/charts/opni-upgrade-responder/0.2.0/templates/secret.yaml
+++ b/charts/opni-upgrade-responder/0.2.0/templates/secret.yaml
@@ -4,13 +4,13 @@ kind: Secret
 metadata:
   name: {{ .Values.secret.name }}
   labels:
-    app: {{ include "opniUpdateResponder.name" . }}
+    app: {{ include "opniUpgradeResponder.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  lurInfluxUrl: {{ .Values.secret.lurInfluxUrl | b64enc | quote }}
-  lurInfluxUser: {{ .Values.secret.lurInfluxUser | b64enc | quote }}
-  lurInfluxPassword: {{ .Values.secret.lurInfluxPassword | b64enc | quote }}
+  influxDBUrl: {{ .Values.secret.influxDBUrl | b64enc | quote }}
+  influxDBUser: {{ .Values.secret.influxDBUser | b64enc | quote }}
+  influxDBPassword: {{ .Values.secret.influxDBPassword | b64enc | quote }}
 {{ end }}
