--- a/charts/opni-upgrade-responder/0.2.0/templates/service.yaml
+++ b/charts/opni-upgrade-responder/0.2.0/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "opniUpdateResponder.fullname" . }}
+  name: {{ include "opniUpgradeResponder.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "opniUpdateResponder.name" . }}
-    helm.sh/chart: {{ include "opniUpdateResponder.chart" . }}
+    app.kubernetes.io/name: {{ include "opniUpgradeResponder.name" . }}
+    helm.sh/chart: {{ include "opniUpgradeResponder.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
@@ -15,5 +15,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: {{ include "opniUpdateResponder.name" . }}
+    app.kubernetes.io/name: {{ include "opniUpgradeResponder.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
