--- a/charts/opni-upgrade-responder/0.2.0/values.yaml
+++ b/charts/opni-upgrade-responder/0.2.0/values.yaml
@@ -1,17 +1,14 @@
-secret:
-  name: lursecrets
-  # Set this to true if you want to manage these secrets with helm
-  managed: false
-  lurInfluxUrl: ""
-  lurInfluxUser: ""
-  lurInfluxPassword: ""
+applicationName: opni-upgrade-responder
 
-# This configmap contains information about the latest opni release
-configMap:
-  name: lurresponseconfig
-  # Set this to true if you want to manage this configmap with helm
+secret:
+  name: opni-upgrade-responder-secrets
   managed: false
-  lurResponseConfig: |-
+  influxDBUrl: ""
+  influxDBUser: ""
+  influxDBPassword: ""
+
+configMap:
+  responseConfig: |-
     {
        "Versions": [{
           "Name": "v0.3.0",
@@ -23,8 +20,8 @@ configMap:
 replicaCount: 3
 
 image:
-  repository: rancher/opni-upgrade-responder
-  tag: latest
+  repository: longhornio/upgrade-responder
+  tag: v0.1.2
   pullPolicy: IfNotPresent
 
 nameOverride: ""
@@ -37,8 +34,6 @@ service:
 ingress:
   enabled: true
   annotations:
-    kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: letsencrypt-prod
     prometheus.io/scrape: "true"
     prometheus.io/port: "10254"
   path: /
@@ -62,3 +57,4 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
