Replace locust example with git-mirror

--- a/charts/locust/0.27.1/templates/configmap-locust-locustfile.yaml
+++ b/charts/locust/0.27.1/templates/configmap-locust-locustfile.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.loadtest.locust_locustfile_configmap "example-locustfile" }}
+{{- if .Values.loadtest.locust_locustfile_configmap }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
