removing db, pass info for using rds
Signed-off-by: matttrach <matttrach@gmail.com>

--- a/charts/opdom/templates/server-deployment.yaml
+++ b/charts/opdom/templates/server-deployment.yaml
@@ -38,7 +38,7 @@ spec:
             - /opt/opdom/config.json
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: {{ .Values.server.port }}
               protocol: TCP
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
