--- a/charts/opdom/templates/server-secret.yaml
+++ b/charts/opdom/templates/server-secret.yaml
@@ -13,17 +13,17 @@ stringData:
         "secret_key": {{ required "a jwt signing key is required" .Values.server.secretKey | quote }}
       },
       "database": {
-        "user": "opdom",
-        "pass": {{ .Values.db.password | quote }},
-        "host": {{ include "opdom.dbName" . | quote }},
-        "port": "3306",
-        "name": "opdom"
+        "user": {{ .Values.db.username | default "opdom" | quote }},
+        "pass": {{ .Values.db.password | default "opdom" | quote }},
+        "host": {{ .Values.db.hostname | default include "opdom.dbName" . | quote }},
+        "port": {{ .Values.db.port | default "3306" | quote }},
+        "name": {{ .Values.db.name | default "opdom" | quote }},
       },
       "github": {
         "client_id": {{ .Values.github.clientId | quote }},
         "client_secret": {{ .Values.github.clientSecret | quote }}
       },
       "http": {
-        "port": "8080"
+        "port": "80"
       }
     }
