--- a/charts/opdom/values.yaml
+++ b/charts/opdom/values.yaml
@@ -1,45 +1,40 @@
 # Default values for opdom.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+nameOverride: "opdom"
+fullNameOverride: "opdom"
 
 github:
-  clientId: ""
-  clientSecret: ""
+  clientId: "fake1234"
+  clientSecret: "fake1234"
 
 server:
-  secretKey: ""
+  secretKey: "fake1234"
   image:
     repository: rancher/opdom
     pullPolicy: Always
     tag: v0.1.0
   replicaCount: 1
   resources: {}
-    # limits:
-    #   cpu: 100m
-    #   memory: 128Mi
-    # requests:
-    #   cpu: 100m
-    #   memory: 128Mi
   nodeSelector: {}
   tolerations: []
   affinity: {}
   podAnnotations: {}
+  port: 80
   service:
     type: ClusterIP
     port: 80
 
 db:
   enabled: true
+  name: "opdom"
+  username: "opdom"
   password: "opdom"
+  hostname: "opdom-db-0"
+  port: "3306"
   image:
     pullPolicy: IfNotPresent
   resources: {}
-    # limits:
-    #   cpu: 100m
-    #   memory: 128Mi
-    # requests:
-    #   cpu: 100m
-    #   memory: 128Mi
   nodeSelector: {}
   tolerations: []
   affinity: {}
@@ -49,15 +44,9 @@ ingress:
   enabled: true
   className: ""
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
   hosts:
     - host: opdom.local
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
