setting a simpler default
Signed-off-by: matttrach <matttrach@gmail.com>

--- a/charts/opdom/templates/server-secret.yaml
+++ b/charts/opdom/templates/server-secret.yaml
@@ -15,7 +15,7 @@ stringData:
       "database": {
         "user": {{ .Values.db.username | default "opdom" | quote }},
         "pass": {{ .Values.db.password | default "opdom" | quote }},
-        "host": {{ .Values.db.hostname | default include "opdom.dbName" . | quote }},
+        "host": {{ .Values.db.hostname | default "opdom-db.local" | quote }},
         "port": {{ .Values.db.port | default "3306" | quote }},
         "name": {{ .Values.db.name | default "opdom" | quote }},
       },
