--- a/charts/opdom/values.yaml
+++ b/charts/opdom/values.yaml
@@ -1,6 +1,9 @@
 # Default values for opdom.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+fullnameOverride: ""
+nameOverride: ""
+
 github:
   clientId: "fake1234"
   clientSecret: "fake1234"
